--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Clinic Management System</title>
-        <link rel="icon" href="./assets/images/logo.png"/>
-        <link rel="stylesheet" href="./assets/css/index.css"/>
-        <link rel="stylesheet" href="./assets/css/style.css"/>
-        <script src="./js/util.js" defer></script>
-        <script src="./js/render.js" defer></script>
-        <script src="./js/components/header.js" defer></script>
-        <script src="./js/components/footer.js" defer></script>
-    </head>
-    <body>
-        <main>
-            <div class="container">
-                
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hospital CMS - Role Selection</title>
+    <link rel="stylesheet" href="assets/css/index.css">
+</head>
+<body>
+    <header>
+        <h1>Hospital CMS</h1>
+    </header>
+
+    <main>
+        <div class="role-selection">
+            <h2>Select Your Role</h2>
+            <div class="button-container">
+                <button class="role-button" onclick="selectRole('admin')">Admin</button>
+                <button class="role-button" onclick="selectRole('patient')">Patient</button>
+                <button class="role-button" onclick="selectRole('doctor')">Doctor</button>
             </div>
-        </main>
-    </body>
+        </div>
+    </main>
+
+    <footer>
+    </footer>
+
+    <script>
+        function selectRole(role) {
+            window.location.href = `${role}-login.html`;
+        }
+    </script>
+</body>
 </html>
